--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,15 +5,15 @@ plugins {
 }
 
 android {
-    namespace 'com.example.lepeenice'
+    namespace 'com.appcovizzi.lepeenice'
     compileSdk 33
 
     defaultConfig {
-        applicationId "com.example.lepeenice"
+        applicationId "com.appcovizzi.lepeenice"
         minSdk 29
         targetSdk 33
-        versionCode 1
-        versionName "1.0"
+        versionCode 2
+        versionName "1.1"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         vectorDrawables {
@@ -23,7 +23,7 @@ android {
 
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
