--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,8 @@ plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-kapt'
+    id 'kotlinx-serialization'
+    id 'kotlin-android-extensions'
 }
 
 android {
@@ -12,8 +14,8 @@ android {
         applicationId "com.appcovizzi.lepeenice"
         minSdk 29
         targetSdk 33
-        versionCode 4
-        versionName "1.3"
+        versionCode 18
+        versionName "1.5.8"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         vectorDrawables {
@@ -53,7 +55,6 @@ dependencies {
     def nav_version = "2.5.3"
 
     implementation("androidx.navigation:navigation-compose:$nav_version")
-
 
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
