--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    package="com.appcovizzi.lepeenice">
 
     <!-- Ajoutez les permissions nécessaires -->
     <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.BODY_SENSORS" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+        tools:ignore="ScopedStorage" />
 
     <!-- Ajoutez la déclaration de la fonctionnalité "android.hardware.sensor.accelerometer" -->
     <uses-feature android:name="android.hardware.sensor.accelerometer" android:required="true" />
@@ -23,7 +26,6 @@
             android:name=".MainActivity"
             android:exported="true"
             android:screenOrientation="portrait"
-            android:label="@string/app_name"
             android:theme="@style/Theme.LEpeeNice">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
